fix[styles] Lengthen search bar by 5%
The placeholder text in the search bar was being cut off.

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -506,7 +506,7 @@ float: right;
   margin-bottom: 10px;
   float: right;
   margin-right: 15px;
-  width: 70%;
+  width: 75%;
   background-color: transparent;
   color: white;
   font-weight: bold;
